updated next, reformated images, worked on some spacing issue with the text to make it more legible

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,22 +63,31 @@ a {
 h1 {
   @apply text-3xl;
   @apply font-bold;
-  @apply mt-4;
+  @apply mb-4;
+  @apply mt-16;
+  @apply first:mt-0;
 }
 
 h2 {
   @apply text-2xl;
   @apply font-bold;
-  @apply mt-2;
+  @apply mb-3;
+  @apply mt-12;
+  @apply first:mt-0;
 }
 
 h3 {
   @apply text-xl;
   @apply font-bold;
+  @apply mb-1;
+  @apply mt-3;
+  @apply first:mt-0;
 }
 
 p {
-  /* margin-bottom: 1rem; */
+  @apply mb-4;
+  @apply first:mt-0;
+  @apply leading-relaxed;
 }
 
 small {
@@ -107,7 +116,7 @@ li {
   margin-bottom: 0.5rem;
 }
 li:last-child {
-  margin-bottom: unset;
+  margin-bottom: 1.5rem;
 }
 
 img {
